@@ -29,6 +29,7 @@ Template for new versions:
 ## New Tools
 
 ## New Features
+- `gui/quickcmd`: added custom command names and option to display command output
 
 ## Fixes
 
